--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
         let installEvent;
 
         const relatedApps = navigator.getInstalledRelatedApps();
+        console.log(relatedApps);
         const PWAisInstalled = relatedApps.length > 0;
         if (PWAisInstalled) {
             // Скрываем кнопку установки PWA
