--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
     <script>
         const installButton = document.querySelector('button');
         let installEvent;
+        console.log(navigator);
 
         /**
         * проверка, с мобильного устройства или нет зашел пользователь
