--- a/index.html
+++ b/index.html
@@ -228,7 +228,6 @@
         const installButton = document.querySelector('button');
         let installEvent;
 
-
         /**
         * проверка, с мобильного устройства или нет зашел пользователь
         */
@@ -264,17 +263,7 @@
 
 
             function showInstructions() {
-                console.log(navigator);
-                if (navigator.userAgent.includes('Safari')) {
-                    console.log('safari');
-                    alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве iOS через Safari:\n\n1. Нажмите на кнопку «Поделиться» внизу экрана.\n2. Выберите «Добавить на экран Домой» из списка опций.\n3. Нажмите «Добавить» в правом верхнем углу.");
-                } else if (navigator.userAgent.includes('OPR') && !navigator.userAgent.includes("Safari")) {
-                    console.log('opera');
-                    alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве через Opera:\n\n1. Нажмите на иконку « ⋮ » в правом верхнем углу экрана.\n2. Выберите «Добавить в...» из списка опций.\n3. Выберите «Главный экран");
-                } else if (navigator.userAgent.includes('Firefox')) {
-                    console.log('firefox');
-                    alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве через Firefox:\n\n1. Нажмите на иконку « ⋮ » в правом верхнем углу экрана.\n2. Выберите «На домашний экран»");
-                }
+                alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве\n\nчерез Safari:\n\n1. Нажмите на кнопку «Поделиться» внизу экрана.\n2. Выберите «Добавить на экран Домой» из списка опций.\n3. Нажмите «Добавить» в правом верхнем углу.\n\nчерез Opera:\n\n1. Нажмите на иконку « ⋮ » в правом верхнем углу экрана.\n2. Выберите «Добавить в...» из списка опций.\n3. Выберите «Главный экран»\n\nчерез Firefox:\n\n1. Нажмите на иконку « ⋮ » в правом верхнем углу экрана.\n2. Выберите «На домашний экран»");
             }
 
             window.addEventListener('appinstalled', () => {
