--- a/index.html
+++ b/index.html
@@ -251,6 +251,28 @@
         const installButton = document.querySelector('.install-btn');
         let installEvent;
 
+        const modal = document.getElementById('myModal');
+        const closeButton = document.getElementsByClassName('close')[0];
+
+        function openModal() {
+            modal.style.display = 'block';
+        }
+
+        function closeModal() {
+            modal.style.display = 'none';
+            installBtnInstruction.style.display = 'none';
+        }
+
+        closeButton.onclick = function () {
+            closeModal();
+        };
+
+        window.onclick = function (event) {
+            if (event.target === modal) {
+                closeModal();
+            }
+        };
+
         /**
         * проверка, с мобильного устройства или нет зашел пользователь
         */
@@ -280,40 +302,11 @@
                             // installButton.style.display = 'block';
                         }
                     });
+                } else {
+                    openModal();
                 }
             });
-
-            if (!installEvent) {
-                const installBtnInstruction = document.querySelector('.install-btn-instruction');
-                installBtnInstruction.style.display = 'block';
-                const modal = document.getElementById('myModal');
-                const closeButton = document.getElementsByClassName('close')[0];
-
-                function openModal() {
-                    modal.style.display = 'block';
-                }
-
-                function closeModal() {
-                    modal.style.display = 'none';
-                    installBtnInstruction.style.display = 'none';
-                }
-
-                closeButton.onclick = function () {
-                    closeModal();
-                };
-
-                window.onclick = function (event) {
-                    if (event.target === modal) {
-                        closeModal();
-                    }
-                };
-                installBtnInstruction.addEventListener('click', () => {
-                    openModal();
-                });
-            }
-
-
-
+            
             // function showInstructions() {
             //     alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве\n\nчерез Safari:\n\n1. Нажмите на кнопку «Поделиться» внизу экрана.\n2. Выберите «Добавить на экран Домой» из списка опций.\n3. Нажмите «Добавить» в правом верхнем углу.\n\nчерез Opera:\n\n1. Нажмите на иконку « ⋮ » в правом верхнем углу экрана.\n2. Выберите «Добавить в...» из списка опций.\n3. Выберите «Главный экран»\n\nчерез Firefox:\n\n1. Нажмите на иконку « ⋮ » в правом верхнем углу экрана.\n2. Выберите «На домашний экран»");
             // }
