--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
         function closeModal() {
             modal.style.display = 'none';
-            installBtnInstruction.style.display = 'none';
+            installButton.style.display = 'none';
         }
 
         closeButton.onclick = function () {
