--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/sw.js', { scope: '/' })
+            navigator.serviceWorker.register('/service-worker.js', { scope: '/' })
                 .then(function (registration) {
                     console.log('Service Worker зарегистрирован:', registration);
                 })
