--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('service-worker.js', {scope: '/../btnUp/service-worker.js'})
+            navigator.serviceWorker.register('service-worker.js', {scope: '/btnUp/service-worker.js'})
                 .then(function (registration) {
                     console.log('Service Worker зарегистрирован:', registration);
                 })
