--- a/index.html
+++ b/index.html
@@ -247,17 +247,37 @@
     </div>
 
     <script>
+
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('service-worker.js', {scope: '/btnUp/service-worker.js'})
-                .then(function (registration) {
-                    console.log('Service Worker зарегистрирован:', registration);
-                })
-                .catch(function (error) {
-                    console.log('Ошибка при регистрации Service Worker:', error);
-                });
+            if (navigator.serviceWorker.controller) {
+                if (navigator.serviceWorker.controller.scope === '/btnUp/service-worker.js') {
+                    if (navigator.serviceWorker.isInstalled) {
+                        console.log('Приложение PWA установлено');
+                    } else {
+                        console.log('Приложение PWA не установлено');
+                    }
+                } else {
+                    console.log('Установленная PWA имеет другой scope');
+                }
+            } else {
+                console.log('Service Worker не зарегистрирован');
+            }
         } else {
             console.log('Браузер не поддерживает Service Worker');
         }
+
+
+        // if ('serviceWorker' in navigator) {
+        //     navigator.serviceWorker.register('service-worker.js', { scope: '/btnUp/service-worker.js' })
+        //         .then(function (registration) {
+        //             console.log('Service Worker зарегистрирован:', registration);
+        //         })
+        //         .catch(function (error) {
+        //             console.log('Ошибка при регистрации Service Worker:', error);
+        //         });
+        // } else {
+        //     console.log('Браузер не поддерживает Service Worker');
+        // }
         const installButton = document.querySelector('.install-btn');
         let installEvent;
 
