--- a/index.html
+++ b/index.html
@@ -256,12 +256,8 @@
                 .catch(function (error) {
                     console.log('Ошибка при регистрации Service Worker:', error);
                 });
-        } else {
-            console.log('Браузер не поддерживает Service Worker');
-        }
 
-        if ('serviceWorker' in navigator) {
-            if (navigator.serviceWorker.controller) {
+                if (navigator.serviceWorker.controller) {
                 if (navigator.serviceWorker.controller.scope === '/btnUp/service-worker.js') {
                     if (navigator.serviceWorker.isInstalled) {
                         console.log('Приложение PWA установлено');
@@ -277,6 +273,24 @@
         } else {
             console.log('Браузер не поддерживает Service Worker');
         }
+
+        // if ('serviceWorker' in navigator) {
+        //     if (navigator.serviceWorker.controller) {
+        //         if (navigator.serviceWorker.controller.scope === '/btnUp/service-worker.js') {
+        //             if (navigator.serviceWorker.isInstalled) {
+        //                 console.log('Приложение PWA установлено');
+        //             } else {
+        //                 console.log('Приложение PWA не установлено');
+        //             }
+        //         } else {
+        //             console.log('Установленная PWA имеет другой scope');
+        //         }
+        //     } else {
+        //         console.log('Service Worker не зарегистрирован');
+        //     }
+        // } else {
+        //     console.log('Браузер не поддерживает Service Worker');
+        // }
 
 
 
