--- a/index.html
+++ b/index.html
@@ -247,6 +247,8 @@
     </div>
 
     <script>
+
+        console.log(navigator.serviceWorker.isInstalled);
         // if ('serviceWorker' in navigator) {
         //     if (navigator.serviceWorker.controller) {
         //         if (navigator.serviceWorker.controller.scope === '/btnUp/service-worker.js') {
