--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 }
             });
 
-            instructionButton.addEventListener('click', openModal());
+            instructionButton.addEventListener('click', openModal);
 
             window.addEventListener('appinstalled', () => {
                 // Скрыть кнопки после установки PWA
