--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
             if (!('beforeinstallprompt' in window)) {
                 // Если браузер не предлагает установку PWA, добавляем кнопку с инструкцией
-                instructionButton.style.display = 'block';
+                // instructionButton.style.display = 'block';
                 instructionButton.addEventListener('click', () => {
                     // Показываем инструкцию по установке
                     openModal();
