--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                     // Показываем инструкцию по установке
                     openModal();
                 })
-            }
+            } else console.log('000');
 
 
             window.addEventListener('appinstalled', () => {
